--- a/arch/PKGBUILD
+++ b/arch/PKGBUILD
@@ -2,14 +2,14 @@
 # Maintainer: Pat Brisbin <pbrisbin@gmail.com>
 # Contributor: Emil Falk <emph@emph.se>
 pkgname=zsh-pure-prompt-git
-pkgver=r61.7d3b317
+pkgver=r192.ed58b18
 pkgrel=1
 pkgdesc='A minimal and pure prompt for zsh.'
 arch=('any')
-url='https://github.com/sindresorhus/pure'
+url='https://github.com/pavlin-policar/pure'
 license=('MIT')
 depends=('zsh' 'git')
-source=("$pkgname::git://github.com/sindresorhus/pure.git")
+source=("$pkgname::git://github.com/pavlin-policar/pure.git")
 sha256sums=('SKIP')
 
 pkgver() {
